--- a/css/style.css
+++ b/css/style.css
@@ -321,6 +321,7 @@ a {
   font-weight: 500;
   font-size: calc(20px * var(--font-size-multiplier));
   line-height: 1.25;
+  letter-spacing: 0.15px;
   word-break: break-word;
   padding-left: 8px;
 }
@@ -331,6 +332,7 @@ a {
   align-items: center;
   margin-left: 8px;
   font-size: 16px;
+  letter-spacing: 0.15px;
   word-break: break-word;
   color: var(--color-secondary-text);
   height: 32px;
@@ -374,6 +376,7 @@ a {
   text-transform: uppercase;
   font-size: 14px;
   margin: 1px 6px 0 6px;
+  letter-spacing: 1.25px;
 }
 
 [class^='navigation-button-'] > .icon {
@@ -492,6 +495,7 @@ body.show-outline .floating-action-button:focus:after {
   font-size: 14px;
   display: inline-block;
   margin: 1px 8px 0 0;
+  letter-spacing: 1.25px;
 }
 
 #button-advance-all {
