add methods to force screen readers to speak

--- a/css/style.css
+++ b/css/style.css
@@ -750,3 +750,19 @@ body.show-outline .link-with-icon:focus {
 }
 
 /* #endregion Media queries */
+
+/* #region Accessibility */
+
+.aria-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
+/* #endregion Accessibility */
