--- a/css/style.css
+++ b/css/style.css
@@ -101,9 +101,6 @@ body {
   --color-destructive-l: 100%;
   --color-destructive: hsl(0, 0%, var(--color-destructive-l));
 
-  --swiper-navigation-background-color: var(--color-accent-lighter);
-  --swiper-navigation-background-color-unhovered: hsl(0, 0%, var(--color-card-background-l), 0.7);
-
   --color-divider-l: 0%;
   --color-divider: hsla(0, 0%, var(--color-divider-l), 0.12);
 
@@ -174,6 +171,7 @@ body.show-outline button:focus,
 body.show-outline a:focus,
 body.show-outline .checkbox-label:focus-within {
   outline: 2px dashed var(--color-text);
+  outline-color: invert;
   outline-offset: -5px;
 }
 
@@ -320,9 +318,6 @@ a {
   justify-content: center;
   align-self: center;
   justify-self: center;
-  transition-duration: var(--hover-duration);
-  transition-timing-function: var(--timing-function);
-  transition-property: background-color;
 }
 
 [class^='navigation-button-'] > span {
@@ -334,11 +329,6 @@ a {
 
 [class^='navigation-button-'] > .icon {
   transform: scale(1.25);
-}
-
-[class^='navigation-button-']:hover,
-body.show-outline [class^='navigation-button-']:focus {
-  background-color: var(--swiper-navigation-background-color);
 }
 
 .swiper-button-disabled {
@@ -411,24 +401,6 @@ footer.visible {
   box-shadow: var(--fab-shadow-active);
 }
 
-.floating-action-button:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  border-radius: 48px;
-  background-color: currentColor;
-  transition: opacity var(--hover-duration) var(--timing-function);
-  opacity: 0;
-}
-
-.floating-action-button:hover:after,
-body.show-outline .floating-action-button:focus:after {
-  opacity: 0.06;
-}
-
 .floating-action-button.visible {
   transform: scale(1) translate3d(-50%, -50%, 0);
   opacity: 1;
@@ -465,14 +437,6 @@ body.show-outline .floating-action-button:focus:after {
   cursor: pointer;
   background-color: transparent;
   color: var(--color-accent);
-  transition-property: background-color;
-  transition-duration: var(--hover-duration);
-  transition-timing-function: var(--timing-function);
-}
-
-.circular-button:hover,
-body.show-outline .circular-button:focus {
-  background-color: var(--swiper-navigation-background-color);
 }
 
 .circular-button:disabled {
@@ -579,12 +543,8 @@ footer .circular-button {
   flex-wrap: nowrap;
   padding: 16px 26px;
   cursor: pointer;
+  color: var(--color-text);
   border-radius: var(--sliding-sheet-item-border-radius);
-}
-
-.checkbox-label:hover,
-body.show-outline .checkbox-label:focus-within {
-  background-color: var(--swiper-navigation-background-color);
 }
 
 .checkbox-label > span {
@@ -652,11 +612,6 @@ body.show-outline .checkbox-label:focus-within {
   position: relative;
 }
 
-.link-with-icon:hover,
-body.show-outline .link-with-icon:focus {
-  background-color: var(--swiper-navigation-background-color);
-}
-
 .link-with-icon .icon {
   color: var(--color-icon);
 }
@@ -666,6 +621,64 @@ body.show-outline .link-with-icon:focus {
 }
 
 /* #endregion Sliding panel (settings, about, ...) */
+
+/* #region Hover and focus styles */
+
+.rippleJS {
+  z-index: 3;
+}
+
+button *,
+a *,
+.checkbox-label * {
+  z-index: 2;
+}
+
+/* Hover: before, Focus: after */
+button:before,
+a:before,
+.checkbox-label:before,
+button:after,
+a:after,
+.checkbox-label:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  border-radius: inherit;
+  background-color: currentColor;
+  opacity: 0;
+  transition: opacity var(--hover-duration) var(--timing-function);
+}
+
+button:hover:before,
+a:hover:before,
+.checkbox-label:hover:before {
+  opacity: 0.04;
+}
+
+body.show-outline button:focus:after,
+body.show-outline a:focus:after,
+body.show-outline .checkbox-label:focus-within:after {
+  opacity: 0.12;
+}
+
+body.dark button:hover:before,
+body.dark a:hover:before,
+body.dark .checkbox-label:hover:before {
+  opacity: 0.08;
+}
+
+body.dark.show-outline button:focus:after,
+body.dark.show-outline a:focus:after,
+body.dark.show-outline .checkbox-label:focus-within:after {
+  opacity: 0.24;
+}
+
+/* #endregion Hover and focus styles */
 
 /* #region Media queries */
 
@@ -690,6 +703,17 @@ body.show-outline .link-with-icon:focus {
 @media (max-width: 256px) {
   button > span {
     display: none;
+  }
+}
+
+@media (pointer: coarse) {
+  button:before,
+  a:before,
+  .checkbox-label:before,
+  button:after,
+  a:after,
+  .checkbox-label:after {
+    opacity: 0 !important;
   }
 }
 
