transform section header text to uppercase

--- a/css/style.css
+++ b/css/style.css
@@ -287,8 +287,10 @@ a {
   display: var(--card-header-display);
   align-items: center;
   justify-content: center;
-  font-size: 16px;
-  letter-spacing: 0.15px;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 1px;
   word-break: break-word;
   color: var(--color-secondary-text);
   height: 24px;
@@ -318,13 +320,6 @@ a {
   justify-content: center;
   align-self: center;
   justify-self: center;
-}
-
-[class^='navigation-button-'] > span {
-  text-transform: uppercase;
-  font-size: 14px;
-  margin: 1px 6px 0 6px;
-  letter-spacing: 1.25px;
 }
 
 [class^='navigation-button-'] > .icon {
@@ -433,7 +428,6 @@ footer.visible {
   justify-content: center;
   padding: 12px;
   border-radius: 48px;
-  text-transform: uppercase;
   cursor: pointer;
   background-color: transparent;
   color: var(--color-accent);
