--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,8 @@ body {
   --fab-transition-duration: 280ms;
   --fab-opacity-duration: 15ms;
   --icon-rotation-duration: 500ms;
+  --spinner-overlay-duration: 120ms;
+  --spinner-dot-duration: 1s;
 
   margin: 0;
   font-family: 'Roboto', sans-serif;
@@ -179,6 +181,8 @@ body.no-animations {
   --fab-transition-duration: 0.1ms;
   --fab-opacity-duration: 0.1ms;
   --icon-rotation-duration: 0.1ms;
+  --spinner-overlay-duration: 0.1ms;
+  --spinner-dot-duration: 2s;
 }
 
 body.no-animations .ripple {
@@ -246,6 +250,59 @@ a {
 .word-section:last-child {
   margin-bottom: 96px;
 }
+
+/* #region Overlay with animated dots */
+
+.section-overlay {
+  --dot-color: var(--color-text);
+
+  grid-area: 1 / 1 / -1 / -1;
+  background-color: inherit;
+  opacity: 0;
+  z-index: 5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: opacity var(--spinner-overlay-duration);
+}
+
+.section-overlay.visible {
+  opacity: 1;
+}
+
+@keyframes jump-up-down {
+  0%, 60%, 100% {
+    opacity: 0.24;
+    transform: scale(1);
+  }
+  20% {
+    opacity: 1;
+    transform: scale(1.1);
+  }
+}
+
+.section-overlay .dot {
+  --dot-size: 8px;
+
+  width: var(--dot-size);
+  height: var(--dot-size);
+  border-radius: 50%;
+  background-color: var(--dot-color);
+  animation-name: jump-up-down;
+  animation-duration: var(--spinner-dot-duration);
+  animation-iteration-count: infinite;
+  opacity: 0.24;
+}
+
+.section-overlay .dot:nth-child(1) { animation-delay: 0.2s; }
+.section-overlay .dot:nth-child(2) { animation-delay: 0.4s; }
+.section-overlay .dot:nth-child(3) { animation-delay: 0.6s; }
+
+.section-overlay .dot + .dot {
+  margin-left: 8px;
+}
+
+/* #endregion Overlay with animated dots */
 
 /* Contains the wrapper created by Swiper */
 .swiper-outer-container {
