--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,11 @@ a {
   height: var(--icon-size);
 }
 
+u {
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+}
+
 /* #endregion Initial definitions */
 
 /* #region Single section with a word swiper */
