show spinner on swipers reload & more label texts
- delaying swipers' reload improves perceived performance
- showing spinner overlay signalizes that app is working on something
- checkbox labels have additional text for clarity

--- a/css/style.css
+++ b/css/style.css
@@ -714,8 +714,17 @@ footer .circular-button .icon {
   border-radius: var(--sliding-sheet-item-border-radius);
 }
 
-.checkbox-label > span {
+.checkbox-label .label-text {
   margin-left: 32px;
+  display: flex;
+  flex-direction: column;
+}
+
+.checkbox-label .label-text-secondary {
+  font-size: 12px;
+  color: var(--color-secondary-text);
+  margin-top: 6px;
+  letter-spacing: 0.15px;
 }
 
 .checkbox-label input {
